--- a/dygma/normal.yaml
+++ b/dygma/normal.yaml
@@ -76,13 +76,13 @@ layer0:
       key: SHIFT_TO_1
       color: green
     RSPACE1:
-      key: SHIFT_TO_1
-      color: green
+      key: SHIFT_TO_2
+      color: yellow
     LCTRL:
       key: SHIFT_TO_9
       color: red
 
-# Special keys
+# Special keys with LSPACE1
 layer1:
   base_color: green
   keymap:
@@ -182,19 +182,86 @@ layer1:
       key: DEL
       color: yellow
 
-    RSPACE1:
-      key: ENTER
-      color: pink
-    ENTER: TRANSPARENT
+    ENTER: ENTER
+    RSPACE1: ENTER
 
-    TAB: TAB
+    # modifier keys
+    LSHIFT: LSHIFT
+    LGUI: LCTRL
+    F: LALT
+    RSPACE: RGUI
 
-    # copy over modifier keys for use with arrow keys
-    LSHIFT: TRANSPARENT
-    LGUI: TRANSPARENT
-    LSPACE2: TRANSPARENT
-    LSPACE3: TRANSPARENT
-    RSHIFT: TRANSPARENT
+# Special keys with RSPACE1
+layer2:
+  base_color: yellow
+  keymap:
+    # fn keys
+    ONE:
+      key: F1
+      color: orange
+    TWO:
+      key: F2
+      color: orange
+    THREE:
+      key: F3
+      color: orange
+    FOUR:
+      key: F4
+      color: orange
+    FIVE:
+      key: F5
+      color: orange
+    SIX:
+      key: F6
+      color: orange
+    SEVEN:
+      key: F7
+      color: orange
+    EIGHT:
+      key: F8
+      color: orange
+    NINE:
+      key: F9
+      color: orange
+
+    # ctrl
+    W:
+      key: W
+      ctrl: true
+    E:
+      key: E
+      ctrl: true
+    R:
+      key: R
+      ctrl: true
+    A:
+      key: A
+      ctrl: true
+    S:
+      key: S
+      ctrl: true
+    D:
+      key: D
+      ctrl: true
+    Z:
+      key: Z
+      ctrl: true
+    C:
+      key: C
+      ctrl: true
+    V:
+      key: V
+      ctrl: true
+    U:
+      key: U
+      ctrl: true
+    PERIOD:
+      key: PERIOD
+      ctrl: true
+    COMMA:
+      key: COMMA
+      ctrl: true
+    BACKSPACE: DEL
 
 # Spectacle
 layer9:
