--- a/dygma/normal.yaml
+++ b/dygma/normal.yaml
@@ -246,13 +246,65 @@ layer2:
     U: SEVEN
     I: EIGHT
     O: NINE
-    ENTER: ENTER
-    BACKSPACE: BACKSPACE
 
-    RSPACE1:
-      key: SHIFT_TO_1
+    ENTER:
+      key: ENTER
       color: green
+    BACKSPACE:
+      key: BACKSPACE
+      color: green
+    # LSPACE2:
+    #   key: LALT
+    #   color: green
+    # CAPS_LOCK:
+    #   key: ESC
+    #   color: green
+
+    # LSPACE:
+    #   key: PERIOD
+    #   color: green
+    # D: # =
+    #   key: EQUAL
+    #   color: green
+    # F: # +
+    #   key: EQUAL
+    #   shift: true
+    #   color: green
+    # E: # (
+    #   key: NINE
+    #   shift: true
+    #   color: green
+    # R: # )
+    #   key: ZERO
+    #   shift: true
+    #   color: green
+
+    LSPACE1:
+      key: SHIFT_TO_3
+      color: yellow
+    RSPACE1:
+      key: SHIFT_TO_3
+      color: yellow
+
     LALT: TRANSPARENT
+
+# Numpad special
+layer3:
+  base_color: yellow
+  keymap:
+    # arrow keys
+    H:
+      key: LEFT
+      color: green
+    J:
+      key: DOWN
+      color: green
+    K:
+      key: UP
+      color: green
+    L:
+      key: RIGHT
+      color: green
 
 # Spectacle
 layer9:
