--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -61,7 +61,7 @@ tab_bar_style powerline
 tab_powerline_style slanted
 active_tab_title_template "{fmt.fg.tab}{title}:{num_windows}"
 
-enabled_layouts vertical,fat,tall,grid,stack
+enabled_layouts tall,vertical,fat,grid,stack
 scrollback_pager_history_size 1000
 
 env PATH=/usr/local/bin:/opt/homebrew/bin:$PATH
