Fix readline applications in kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -125,3 +125,6 @@ map cmd+v paste_from_clipboard
 #: Config
 map cmd+, edit_config_file
 map cmd+shift+, load_config_file
+
+map alt+left send_text all \x1bb
+map alt+right send_text all \x1bf
