Close window with cmd+;>cmd+;

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -82,7 +82,7 @@ map cmd+shift+w close_os_window
 
 #: Windows
 map cmd+n launch_new --type=window
-map cmd+shift+d close_window
+map cmd+;>cmd+; close_window
 map cmd+j next_window
 map cmd+k previous_window
 map cmd+shift+j focus_visible_window
