--- a/git/config
+++ b/git/config
@@ -34,6 +34,7 @@ bD = bb-delete-branch -D
 p = push --force-with-lease
 pd = !git pull && git delete-merged
 wip = !git add -A && git commit -m '[ci skip] wip' --no-verify
+r = bb-rebase
 rc = rebase --continue
 cp = cherry-pick
 is-in-repo = !git rev-parse --is-inside-work-tree &> /dev/null
