Prune on 'git pd'

--- a/git/config
+++ b/git/config
@@ -32,7 +32,7 @@ mvb = bb-rename-branch
 bd = bb-delete-branch
 bD = bb-delete-branch -D
 p = push --force-with-lease
-pd = !git pull && git delete-merged
+pd = !git pull --prune && git delete-merged
 wip = !git add -A && git commit -m '[ci skip] wip' --no-verify
 r = bb-rebase
 rc = rebase --continue
