Add floating layout shortcut

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -125,6 +125,7 @@ automatically-unhide-macos-hidden-apps = true
     esc = ['reload-config', 'mode main']
 
     m = 'move-workspace-to-monitor --wrap-around next'
+    f = 'layout floating'
 
 [[on-window-detected]]
     if.app-name-regex-substring = 'System Settings|Finder|Steam'
