--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -128,7 +128,7 @@ automatically-unhide-macos-hidden-apps = true
     f = ['layout floating tiling', 'mode main']
 
 [[on-window-detected]]
-    if.app-name-regex-substring = 'System Settings|Finder|Steam'
+    if.app-name-regex-substring = 'System Settings|Finder|FaceTime|Steam'
     run = 'layout floating'
     check-further-callbacks = true
 
