Move 2nd workspace to laptop

--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -131,6 +131,7 @@ automatically-unhide-macos-hidden-apps = true
 # defaults to main
 [workspace-to-monitor-force-assignment]
     1 = 'secondary'
+    2 = 'secondary'
     z = 'secondary'
 
 [[on-window-detected]]
