Update join-with keyboard shortcuts

--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -95,8 +95,8 @@ automatically-unhide-macos-hidden-apps = true
     cmd-alt-shift-k = 'move up'
     cmd-alt-shift-l = 'move right'
 
-    cmd-alt-shift-left = 'join-with left'
-    cmd-alt-shift-right = 'join-with right'
+    cmd-alt-ctrl-h = 'join-with left'
+    cmd-alt-ctrl-l = 'join-with right'
 
     cmd-alt-left  = 'exec-and-forget aerospace list-workspaces --monitor focused --empty no | aerospace workspace prev'
     cmd-alt-right = 'exec-and-forget aerospace list-workspaces --monitor focused --empty no | aerospace workspace next'
