--- a/config/git/config
+++ b/config/git/config
@@ -23,23 +23,19 @@ squash = commit --amend --no-edit
 touch = commit --amend -C HEAD --date now --no-verify --allow-empty
 diff-plain = -c 'pager.diff=less -FX' diff
 show-plain = -c 'pager.show=less -FX' show
-l = !git --no-pager branch-manager-log --oneline
-ll = log --oneline
 s = status -sb
 c = checkout
-bm = branch-manager
-cb = branch-manager-make-branch
-mvb = branch-manager-rename-branch
-bd = branch-manager-delete-branch
-bD = branch-manager-delete-branch -D
 p = push --force-with-lease
-pd = !git pull --prune && git delete-merged
 wip = !git add -A && git commit -m '[ci skip] wip' --no-verify
-r = branch-manager-rebase
+r = "!f() { if [[ $# -gt 0 ]]; then git rebase "$@"; else git rebase -i $(gt parent --no-interactive); fi; }; f"
 rc = rebase --continue
 cp = cherry-pick
 is-in-repo = !git rev-parse --is-inside-work-tree &> /dev/null
 copy-sha = !git rev-parse HEAD | tr -d '\n' | pbcopy
+
+# graphite aliases
+cb = "!f() { gt create "$@" && gt move --onto main; }; f"
+l = quick-log
 
 [merge]
 conflictstyle = zdiff3
