Updates for work

--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -130,14 +130,14 @@ automatically-unhide-macos-hidden-apps = true
 # main = monitor, secondary = laptop
 # defaults to main
 [workspace-to-monitor-force-assignment]
-    1 = 'main'
-    2 = 'main'
+    1 = 'secondary'
+    2 = 'secondary'
     3 = 'main'
     4 = 'main'
     z = 'secondary'
 
 [[on-window-detected]]
-    if.app-name-regex-substring = 'System Settings|Finder|1Password|FaceTime|Steam|Bazecor|zoom.us'
+    if.app-name-regex-substring = 'System Settings|Finder|1Password|FaceTime|Steam|Bazecor|zoom.us|Managed Software Center'
     run = 'layout floating'
     check-further-callbacks = true
 [[on-window-detected]]
