--- a/config/git/config
+++ b/config/git/config
@@ -27,7 +27,7 @@ s = status -sb
 c = checkout
 p = push --force-with-lease
 wip = !git add -A && git commit -m '[ci skip] wip' --no-verify
-r = "!f() { if [[ $# -gt 0 ]]; then git rebase "$@"; else git rebase -i $(gt parent --no-interactive); fi; }; f"
+r = rebase-auto
 rc = rebase --continue
 cp = cherry-pick
 is-in-repo = !git rev-parse --is-inside-work-tree &> /dev/null
