--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -7,6 +7,7 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "auto_indent_on_paste": false,
   "agent": {
     "dock": "bottom",
     "model_parameters": []
@@ -25,6 +26,8 @@
   "always_treat_brackets_as_autoclosed": true,
   "colorize_brackets": false,
   "show_whitespaces": "trailing",
+  "soft_wrap": "none",
+  "wrap_guides": [80, 100],
   "show_signature_help_after_edits": true,
   "project_panel": {
     "entry_spacing": "comfortable",
@@ -39,6 +42,15 @@
     "show": true
   },
   "languages": {
+    "Markdown": {
+      "soft_wrap": "editor_width"
+    },
+    "C": {
+      "tab_size": 2
+    },
+    "Cabal": {
+      "tab_size": 2
+    },
     "Haskell": {
       "tab_size": 2
     }
@@ -66,7 +78,9 @@
     "**/.git",
     "**/.venv",
     "**/venv",
-    "**/bazel-*"
+    "**/.mypy_cache",
+    "**/bazel-*",
+    "**/dist-newstyle"
   ],
   "title_bar": {
     "show_onboarding_banner": true,
@@ -98,6 +112,7 @@
     "hls": {
       "initialization_options": {
         "haskell": {
+          "formattingProvider": "fourmolu",
           "plugin": {
             "hlint": {
               "globalOn": false
