Updates for work

--- a/config/git/config
+++ b/config/git/config
@@ -1,6 +1,6 @@
 [user]
 name = Brandon Chinn
-email = brandonchinn178@gmail.com
+email = bchinn@arista.com
 
 [core]
 pager = delta # TODO: switch to diffnav
