--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -7,6 +7,7 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "ensure_final_newline_on_save": false,
   "auto_indent_on_paste": false,
   "agent": {
     "dock": "bottom",
